# crapsnqt-nostrafe

./: CMakeLists.txt  Craps.ui  CrapsMainWindow.ui  README.md  craps.cpp  craps.h  crapsGame.cpp  crapsResources.cpp  crapsResources.qrc  crapsStarter.pro  crapsStarter.pro.user.15981ea  die.cpp  die.h
build-crapsStarter-Desktop_x86_windows_msvc2019_pe_64bit-Debug/: ui_CrapsMainWindow.h
build-crapsStarter-Desktop_x86_windows_msvc2019_pe_64bit-Debug/debug/: crapsStarter.ilk
